# dmod-vfs

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION.md  Makefile  README.md
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dmvfs_example  fs_tester  test_dir_ops  test_file_ops  test_init  test_mount  test_path
docs/: ROZWIAZANIE.md  dmod-mprotect-fix.md
examples/basic/: README.md  main.c
inc/: dmod_vfs.h  dmvfs.h
patches/: dmod-mprotect-fix.patch
src/: dmod_vfs.c  dmod_vfs_fsi_weak.c  dmod_vfs_sal.c  dmvfs.c
testfs/: CMakeLists.txt  testfs.c
tests/: CMakeLists.txt  Makefile  README.md  dmfsi_sigs_helper.c  dmod-cfg.mk  main.c  mock_fs_sigs.c  test_dir_ops.c  test_directory_operations.c  test_dmvfs_integration.c  test_file_operations.c  test_file_ops.c  test_framework.c  test_framework.h  test_init.c  test_mount.c  test_path.c  test_path_operations.c
tests/ramfs/: CMakeLists.txt  ramfs.c
tests/ramfs_wrapper/: CMakeLists.txt.in
tests/testfs/: .gitignore  CMakeLists.txt  Makefile  README.md  testfs.c
tests/testfs/.github/workflows/: ci.yml
